[package]
authors = ["maorm"]
edition = "2021"
readme = "README.md"
name = "stamrust"
version = "0.1.0"

[dependencies]
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = {version="0.3.1", features = ["cortex-m"]}
stm32-usbd = "0.6.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"

# defmt = "0.3.0"
# defmt-rtt = "0.4.0"
# panic-probe = { version = "0.3.0", features = ["print-defmt"] }


[dependencies.stm32-hal2]
version = "1.6.2"
features = ["l412","l4rt","usb","embedded_hal"]  
                         

# this lets you use `cargo fix`!
[[bin]]
name = "stamrust"
test = false
bench = false


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-



[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
