[package]
authors = ["maorm"]
edition = "2021"
readme = "README.md"
name = "stamrust"
version = "0.1.0"

[dependencies]
#baseline core toolset for baremetal on cortex-m
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-alloc  = "0.5.0"

# prints through jtag port+ panics
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# utils
num_enum = {version = "0.5.11", default-features = false}
# serde = {version="1.0.157",default-features = false, features = ["alloc","derive"]}
# usb
usb-device = {git = "https://github.com/rust-embedded-community/usb-device"}
usbd-serial = "0.1.1"
ringbuf = {version="0.3.3", default-features = false}

# tcpip
smoltcp = { version = "0.9.1", default-features = false, features = ["medium-ethernet","socket-dhcpv4","socket-icmp","socket-udp","socket-tcp","proto-ipv4","alloc","defmt"] }



[dependencies.stm32l4xx-hal]
path = "../stm32l4xx-hal"
features = ["stm32l412","rt","stm32-usbd"]  
                         

# this lets you use `cargo fix`!
[[bin]]
name = "stamrust"
test = false
bench = false


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
